# the-choir-organ

./: .gitignore  .gitlab-ci.yml  README.md  check_wav.ts  index.html  package-lock.json  package.json  quasar.config.ts  test_parsers.ts  vite.remote.config.ts
.github/workflows/: release.yml
src/: App.vue  env.d.ts
src-electron/: electron-main.ts  electron-preload.ts
src-electron/icons/: icon.icns
src-electron/remote/: index.html
src-electron/utils/: archive-handler.ts  hauptwerk-parser.ts  image-reader.ts  midi-manager.ts  odf-parser.ts  organ-manager.ts  partial-wav.ts  persistence.ts  rar-worker.js  renderer.ts  self-signer.ts  wav-reader.ts  web-server.ts  worker-factory.ts
src-electron/workers/: parser-worker.ts  rar-worker.ts  render-note-worker.ts  render-worker.ts
src-native/: Cargo.toml
src-native/src/: engine.rs  main.rs  sampler.rs  voice.rs
src-remote/: App.vue  index.html  main.ts  style.css
src-remote/public/: manifest.json  offline.html  sw.js
src/boot/: pinia.ts
src/components/: AudioMeter.vue  CombinationManager.vue  DebugDrawer.vue  DebugDrawerContent.vue  Drawknob.vue  HelpDialog.vue  OrganScreen.vue  RecordingManager.vue  RemoteServerManager.vue  SettingsManager.vue  SharedAudioSettingsDialog.vue  TsunamiExportManager.vue  UpdateNotifier.vue  VirtualKeyboard.vue  WalkthroughDrawer.vue  WalkthroughPointer.vue
src/css/: app.scss
src/layouts/: MainLayout.vue
src/pages/: IndexPage.vue  OrganBuilderPage.vue  StartPage.vue  TsunamiPreviewPage.vue  WorkerPage.vue
verification/: test-midi-input.js  verify-parser-dimensions.ts
(+13 files in other folders)
