[package]
name = "synth-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
rubato = "0.14" # High quality resampling
rand = "0.8"
byteorder = "1.5"
rayon = "1.8"
memmap2 = "0.9"
